fixed sidebar layout issue when super or sub content block is displayed

--- a/app/scss/base/page/_page.scss
+++ b/app/scss/base/page/_page.scss
@@ -111,5 +111,10 @@
       @include omega;
       padding-left: 0;
     }
+
+    .l-super ~ .l-sidebar-second {
+      position: absolute;
+      top: 0.67em;
+    }
   }
 }
